--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -15,8 +15,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.1.5",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "autoprefixer": "^10.4.19",
     "expo": "~51.0.6",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
@@ -27,6 +29,7 @@
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
