--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.2",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.38",
     "react": "18.2.0",
