--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -30,6 +30,7 @@
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.38",
     "react": "18.2.0",
@@ -39,7 +40,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
