--- a/marketplace/app.json
+++ b/marketplace/app.json
@@ -21,8 +21,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      ["expo-image-picker",
+      {
+        "photosPermission": "This app requires access to your photo library to allow you to select and share photos."
+      }]
     ],
+    
     "experiments": {
       "typedRoutes": true
     }
