--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.5",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "autoprefixer": "^10.4.19",
     "expo": "~51.0.6",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.12",
     "expo-splash-screen": "~0.27.4",
@@ -41,7 +43,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "@react-native-picker/picker": "2.7.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
